<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <groupId>com.play.test</groupId>
    <artifactId>play.root</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <modules>
        <module>play.user.login</module>
        <module>play.user.function</module>
    </modules>
    <name>Play test</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <play2.version>2.6.12</play2.version>
        <scala.version>2.12.4</scala.version>
        <jar.plugin.version>2.6</jar.plugin.version>
        <surefire.plugin.version>2.19.1</surefire.plugin.version>
        <play2.plugin.version>1.0.0-rc3-SNAPSHOT</play2.plugin.version>
        <akka.http.version>10.1.0</akka.http.version>
        <akka.actor.version>2.5.16</akka.actor.version>
        <mybatis.guice.version>3.10</mybatis.guice.version>
        <mybatis.version>3.4.6</mybatis.version>
        <google.guice>4.1.0</google.guice>
        <assertj.core.version>3.6.2</assertj.core.version>
        <awaitility.version>2.0.0</awaitility.version>
        <db2.version>11.1.2</db2.version>
        <play.redis.version>2.0.2</play.redis.version>
        <play.cache.version>2.6.13</play.cache.version>
        <redis.version>2.9.0</redis.version>
        <dbcp.version>2.5.0</dbcp.version>
        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
        <play2.maven.plugin.version>1.0.0-rc3</play2.maven.plugin.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-http -->
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-http_2.12</artifactId>
            <version>${akka.http.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.12</artifactId>
            <version>${akka.actor.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-guice -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-guice</artifactId>
            <version>${mybatis.guice.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>${mybatis.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-jdbc -->
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-jdbc_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${google.guice}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.18</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-guice_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.18</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-java_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-logback_2.12</artifactId>
            <version>${play2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-akka-http-server_2.12</artifactId>
            <version>${play2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-jdbc-api -->
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-jdbc-api_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-java-jdbc -->
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-java-jdbc_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-test_2.12</artifactId>
            <version>${play2.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${awaitility.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.play/filters-helpers -->
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>filters-helpers_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-ws -->
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-ws_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-ahc-ws_2.12</artifactId>
            <version>${play2.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.karelcemus/play-redis -->
        <dependency>
            <groupId>com.github.karelcemus</groupId>
            <artifactId>play-redis_2.12</artifactId>
            <version>${play.redis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.4</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-cache_2.12</artifactId>
            <version>${play.cache.version}</version>
        </dependency>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>${redis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>${dbcp.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>0.9.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-multibindings -->
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-multibindings</artifactId>
            <version>4.1.0</version>
        </dependency>
        <!-- https://search.maven.org/search?q=g:net.sf.supercsv -->
        <dependency>
            <groupId>net.sf.supercsv</groupId>
            <artifactId>super-csv</artifactId>
            <version>2.4.0</version>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>${basedir}/app</sourceDirectory>
        <testSourceDirectory>${basedir}/test</testSourceDirectory>
        <resources>
            <resource>
                <directory>${basedir}/conf</directory>
            </resource>
            <resource>
                <directory>${basedir}/public</directory>
                <targetPath>public</targetPath>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>com.google.code.play2-maven-plugin</groupId>
                <artifactId>play2-maven-plugin</artifactId>
                <version>${play2.maven.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <mainLang>java</mainLang>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${jar.plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <skip>false</skip>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>${surefireArgLine}</argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.1</version>
                <configuration>
                    <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
                    <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
                    <skip>${skipTests}</skip>
                    <output>file</output>
                    <append>true</append>
                    <excludes>
                        <exclude>router/*</exclude>
                        <exclude>**/controllers/Reverse*</exclude>
                        <exclude>**/controllers/routes*</exclude>
                        <exclude>**/controllers/Reverse*</exclude>
                        <exclude>**/javascript/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!-- docker plugin -->
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.20.1</version>
                <configuration>
                    <skip>false</skip>
                    <images>
                        <image>
                            <name>%g/%a:%l</name>
                            <build>
                                <from>openjdk:8-jre-alpine</from>
                                <tags>
                                    <tag>latest</tag>
                                    <tag>${project.version}</tag>
                                </tags>
                                <assembly>
                                    <descriptorRef>artifact-with-dependencies</descriptorRef>
                                </assembly>
                                <entryPoint>java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -cp
                                    '/maven/*' -Dhttp.address="0.0.0.0" -Dhttp.port="9000"
                                    play.core.server.ProdServerStart
                                </entryPoint>
                            </build>
                        </image>
                    </images>
                </configuration>
            </plugin>
            <!-- Copy dependency Jars to lib folder -->
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>sonar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- SERVER ON A REMOTE HOST -->
                <sonar.host.url>http://192.168.10.50:9090</sonar.host.url>
            </properties>
        </profile>
        <profile>
            <id>dist</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>play.core.server.ProdServerStart</mainClass>
                                    <addClasspath>true</addClasspath>
                                    <classpathPrefix>lib/</classpathPrefix>
                                </manifest>
                                <!-- Add config folder into classpath of MANIFEST -->
                                <manifestEntries>
                                    <Class-Path>conf/</Class-Path>
                                </manifestEntries>
                            </archive>
                            <classesDirectory></classesDirectory>
                            <!--<excludes> <exclude>*.conf</exclude> <exclude>*.xml</exclude>
                                </excludes> -->
                        </configuration>
                    </plugin>
                    <!-- Copy dependency Jars to lib folder -->
                    <plugin>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <configuration>
                            <descriptors>
                                <descriptor>assembly.xml</descriptor>
                            </descriptors>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-assembly</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
